--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,3 +53,28 @@ a {
 .text-on-color {
   color: #35384a;
 }
+
+/* width */
+.scrollbar::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+.scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+.scrollbar::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 50px;
+}
+
+/* Handle on hover */
+.scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.black-background {
+  background-color: #454751;
+}
